complate stt
